<resources>
    <string name="app_name">Справочник DEMO</string>
    <string name="department_list">Отделы</string>

    <string name="load_auth_message">Проверка данных</string>

    <string name="auth_layout">Авторизация</string>
    <string name="auth_text_login">Логин</string>
    <string name="auth_text_password">Пароль</string>
    <string name="auth_button_log_in">Вход</string>
    <string name="auth_error_message_incorrect">Логин/пароль неверный</string>
    <string name="auth_error_message_empty">Обязательное поле</string>
    <string name="title_activity_login">Sign in</string>

    <string name="employee_title">Должность</string>
    <string name="employee_name">ФИО</string>
    <string name="employee_phone">Телефон</string>
    <string name="employee_email">Эл.почта</string>

    <string name="action_log_out">Выход</string>

    <string name="search_hint">Отдел,ФИО сотрудника,email,номер телефона,должность</string>

    <string name="log_out_title">Выход</string>
    <string name="log_out_message">Вы уверены, что хотите выйти?</string>
    <string name="positive_button">выход</string>
    <string name="negative_button">отмена</string>

    <string name="shared_avatar_name">avatar</string>
    <string name="shared_star_layout_name">sharedStarLayout</string>

</resources>
