<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="com.example.azolotarev.test.UI.Authorization.AuthorizationFragment"
             android:id="@+id/frameLayout">
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:indeterminateOnly="true"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/container_log_in"
                android:layout_gravity="center">
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_input_layout"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/auth_text_login">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_field"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_input_layout"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/auth_text_password">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/password_field"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                    android:text="@string/auth_button_log_in"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button_log_in"/>
        </LinearLayout>
</FrameLayout>
