<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--employee title-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_item_padding"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    tools:srcCompat="@tools:sample/avatars" />

            </FrameLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/employee_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/list_item_padding"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/employee_title_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:layout_weight="1"
                        android:text="@string/employee_title" />

                    <TextView
                        android:id="@+id/employee_title_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--employee name-->
            <android.support.v7.widget.CardView
                android:id="@+id/employee_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/list_item_padding"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/employee_name_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:layout_weight="1"
                        android:text="@string/employee_name" />

                    <TextView
                        android:id="@+id/employee_name_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--employee phone-->
            <android.support.v7.widget.CardView
                android:id="@+id/employee_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/list_item_padding"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/employee_phone_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:layout_weight="1"
                        android:text="@string/employee_phone" />

                    <TextView
                        android:id="@+id/employee_phone_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--employee email-->
            <android.support.v7.widget.CardView
                android:id="@+id/employee_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/list_item_padding"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/employee_email_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:layout_weight="1"
                        android:text="@string/employee_email" />

                    <TextView
                        android:id="@+id/employee_email_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>